Add idea plugin Change Java to LTS (11) Rearange dependencies for better reading