@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'groovy'
+    id 'idea'
 }
 
 group 'io.github.lsikora'
@@ -10,28 +11,29 @@ repositories {
     jcenter()
 }
 
-sourceCompatibility = JavaVersion.VERSION_12
-targetCompatibility = JavaVersion.VERSION_12
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 test {
-    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
     /*Uncomment for running only tagged tests*/
 //    useJUnitPlatform{
 //        includeTags 'Fast', 'Slow'
 //    }
-    testLogging {
-        events "passed", "skipped", "failed", "started", "standard_out",
-                "standard_error"
-    }
-
 }
 
 dependencies {
+    testImplementation enforcedPlatform('org.junit:junit-bom:5.5.0') {
+        testImplementation group: 'org.junit.jupiter',
+                name: 'junit-jupiter'
+        testRuntimeOnly group: 'org.junit.vintage',
+                name: 'junit-vintage-engine'
+    }
+
+
     testImplementation group: 'org.assertj',
             name: 'assertj-core',
             version: '3.12.1'
@@ -41,15 +43,6 @@ dependencies {
     testImplementation group: 'eu.codearte.catch-exception',
             name: 'catch-throwable',
             version: '1.4.6'
-/*    todo update slide to show that separet junit 4.12 dependency is not 
-    longer needed as it is now compile time dependency in vintage engine */
-    testImplementation platform('org.junit:junit-bom:5.5.0') {
-        testImplementation group: 'org.junit.jupiter',
-                name: 'junit-jupiter'
-        testRuntimeOnly group: 'org.junit.vintage',
-                name: 'junit-vintage-engine'
-    }
-    
     testImplementation group: 'org.spockframework',
             name: 'spock-core',
             version: '1.3-groovy-2.5'
